Add inline paragraph header.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link href="style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <header class="container">
+    <header>
       <img src="logo.jpg" class="logo">
+      <p class="logo">My Times</p>
       <nav>
         <ul>
           <li><a href="#">World</a></li>
