--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <img src="logo.jpg" class="logo">
-      <p class="logo">My Times</p>
+      <p class="header_p">My Times</p>
       <nav>
         <ul>
           <li><a href="#">World</a></li>
