--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
       <img src="logo.jpg" class="logo">
       <p class="header_p">My Times</p>
       <nav>
-        <ul>
-          <li><a href="#">World</a></li>
-          <li><a href="#">U.S.</a></li>
-          <li><a href="#">Tech</a></li>
-          <li><a href="#">Science</a></li>
+          <span><a href="#">World</a></span>
+          <span><a href="#">U.S.</a></span>
+          <span><a href="#">Tech</a></span>
+          <span><a href="#">Science</a></span>
         </ul>
       </nav>
     </header>
