Tweak header syntax.

--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
   </head>
   <body>
     <header>
-      <img src="logo.jpg" class="logo">
+      <img src="logo.jpg" class="logo"/>
       <p class="header_p">My Times</p>
       <nav>
           <span><a href="#">World</a></span>
           <span><a href="#">U.S.</a></span>
           <span><a href="#">Tech</a></span>
           <span><a href="#">Science</a></span>
-        </ul>
       </nav>
     </header>
   </body>
