Add list to span.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
   <body>
     <header>
       <img src="logo.jpg" class="logo"/>
+      <span class="logo">My Times</span>
       <nav>
-          <span><a href="#">World</a></span>
-          <span><a href="#">U.S.</a></span>
-          <span><a href="#">Tech</a></span>
-          <span><a href="#">Science</a></span>
+        <ul>
+          <li><span><a href="#">World</a></span></li>
+          <li><span><a href="#">U.S.</a></span></li>
+          <li><span><a href="#">Tech</a></span></li>
+          <li><span><a href="#">Science</a></span></li>
+        </ul>
       </nav>
     </header>
   </body>
