ID header my times.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <img src="logo.jpg" class="logo"/>
-      <span class="logo">My Times</span>
+      <span id="times">My Times</span>
       <nav>
         <ul>
           <li><span><a href="#">World</a></span></li>
