--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
   </head>
   <body>
     <header>
-  		<div class="logo">
-        <img src="logo.jpg" class="logo"/>
-        <span id="times">My Times</span>
-  		</div>
-        <nav>
-          <ul>
-            <li><span><a href="#">World</a></span></li>
-            <li><span><a href="#">U.S.</a></span></li>
-            <li><span><a href="#">Tech</a></span></li>
-            <li><span><a href="#">Science</a></span></li>
-          </ul>
-        </nav>
-      </header>
+		<div class="logo">
+      <img src="logo.jpg"/>
+      <span id="times">My Times</span>
+		</div>
+
+      <nav>
+        <ul>
+          <li><span><a href="#">World</a></span></li>
+          <li><span><a href="#">U.S.</a></span></li>
+          <li><span><a href="#">Tech</a></span></li>
+          <li><span><a href="#">Science</a></span></li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
